# service-python-fastapi

./: .gitignore  .goreleaser.yaml  agent.codefly.yaml  builder.go  composition_test.go  deployment_test.go  factory.go  go.mod  go.sum  lifecycle_matrix_test.go  main.go  main_test.go  nixflake.go  runtime.go
.connectory/: WELCOME.md
.github/workflows/: releaser.yml
base/: GETTING_STARTED.md  main.py  openapi.py  pyproject.toml  service.codefly.yaml  service.generation.codefly.yaml
base/code/: pyproject.toml
base/code/src/: main.py  openapi.py
base/code/src/framework/: __init__.py  plugin.py
base/code/tests/: test_app.py
base/code/tests/admin/: test_admin.py
base/openapi/: api.json
base/src/: openapi.py  pyproject.toml
base/src/test/: test_app.py
base/swagger/: api.swagger.json
nix/: flake.nix
scripts/publish/: tag.sh
templates/agent/: README.md.tmpl
templates/builder/: Dockerfile.tmpl
templates/deployment/kustomize/base/: deployment.yaml.tmpl  service.yaml.tmpl
templates/factory/: GETTING_STARTED.md.tmpl  flake.nix.tmpl  main.py.tmpl  poetry.lock.tmpl  pyproject.toml.tmpl  service.codefly.yaml.tmpl  service.generation.codefly.yaml.tmpl
templates/factory/code/: poetry.lock.tmpl  pyproject.toml.tmpl
templates/factory/openapi/: api.json.tmpl  api.swagger.json.tmpl
templates/factory/src/: main.py.tmpl  openapi.py.tmpl  poetry.lock.tmpl  pyproject.toml.tmpl
templates/factory/swagger/: README.md.tmpl  api.swagger.json.tmpl
testdata/container1688097319/: service.codefly.yaml
testdata/container1688097319/openapi/: api.swagger.json
(+17 files in other folders)
