[project]
name = "base"
version = "0.0.0"
description = ""
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.25.0",
    "codefly-sdk>=0.0.14",
    "pydantic>=2.9.2",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "httpx>=0.27.0",
    "pytest-asyncio>=0.23.6",
    "codefly-cli>=0.0.19",
    "ruff>=0.6.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
